[package]
name = "quinn-wasm-web"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.74"
console_error_panic_hook = { version = "0.1.7", optional = true }
quinn-wasm = { path = "../..", default-features = false, features = ["wasm-web"] }
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.37"
rustls = { version = "0.21.0", default-features = false, features = ["quic", "dangerous_configuration"] }
ring = { version = "0.17.7", features = ["wasm32_unknown_unknown_js"] }
web-time = "0.2.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
